# reTeX

./: .gitignore  Cargo.toml  LICENSE  README.md
.claude/: settings.local.json
crates/retex-base/: Cargo.toml
crates/retex-base/src/: lib.rs  maybe_char.rs  memory_buffer.rs  source_location.rs  source_manager.rs
crates/retex-cli/: Cargo.toml
crates/retex-lex/: Cargo.toml
crates/retex-lex/src/: category_code.rs  command_identifier.rs  lexer.rs  lib.rs  preprocessor.rs  token.rs
crates/retex-lex/tests/: lexer.rs  token_data_validation.rs
