[package]
name = "retex-lex"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
readme.workspace = true

[dependencies]
retex-base.workspace = true
bumpalo = { version = "3.14", features = ["collections"] }

[lints]
workspace = true
